--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>HELLO WORLD</h1>
+  <img src="https://picsum.photos/seed/picsum/800/600" alt="">
   <ul>
-    <li><a href="">#</a></li>
+    <li><a href="https://pchome.com.tw" target="_blank">link01</a></li>
     <li><a href="">#</a></li>
     <li><a href="">#</a></li>
     <li><a href="">#</a></li>
