--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <img src="https://picsum.photos/seed/picsum/800/600" alt="">
   <ul>
     <li><a href="https://pchome.com.tw" target="_blank">link01</a></li>
-    <li><a href="">123456#</a></li>
-    <li><a href="">#</a></li>
+    <li><a href="">關於我們</a></li>
+    <li><a href="">CSS</a></li>
     <li><a href="">#</a></li>
     <li><a href="">#</a></li>
   </ul>
